--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style_index.css">
+    <title>Homet</title>
 </head>
 <body>
     <header>
         <h1>&#x1F578; Spider Programming &#x1F578;</h1>
     </header>
-    <nav>
+    <nav class="menu1">
         <a href="#">Home</a>
         <a href="#">Post</a>
+    </nav>
+    <nav class="menu2">
         <a href="#">Content</a>
         <a href="#">Contact</a>
     </nav>
     <main>
-        <article class="artigo1">
-            <h1>Hackers exigem resgate e ameaçam vazar 80 GB de dados do Reddit</h1>
-            <p>19 de junho de 2023</p>
-            <img src="imagens/img1.jpg" alt="imagem">
-            <p>O grupo BlackCat teria obtido acesso a informações de funcionários e documentos internos por meio de um ataque de phishing “altamente direcionado”, ocorrido no início deste ano. As informações são do site TechCrunch.</p>
-        </article>
-
-        <article class="artigo2">
-            <h1>Nova arquitetura revoluciona o desenvolvimento de IAs, afirmam cientistas da computação</h1>
-            <p>19 de junho de 2023</p>
-            <img src="imagens/img2.jpg" alt="imagem">
-            <p>Em comparação com redes neurais artificiais, a “computação hiperdimensional” permitiria a máquinas raciocinarem por analogia, sendo mais precisas, 250 vezes mais rápidas, 10 vezes mais tolerantes a falhas e mais transparentes, além de consumirem muito menos energia. As informações são da Quanta Magazine.</p>
-        </article>
+        <div class="background"></div>
+        <section>
+            <div>
+                <div class="caixa">
+                    <p>Teias de conhecimento, programando o futuro.</p>
+                </div>
+            </div>
+            <h1>Opa, eu sou Spider Programming🕷️💻</h1>
+            <p>Aqui na minha teia virtual, você encontrará tudo sobre <br> programação, memes e notícias incríveis do mundo da tecnologia. <br> Estou pronto para compartilhar com você os segredos e truques desse universo, <br> desde os melhores códigos até as últimas tendências 🚀🕸️</p>
+        </section>
     </main>
     <footer>
         <p>Blog feito por <a href="https://github.com/vinigomes-code" target="_blank" rel="external">ViniCode</a></p>
