--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style_index.css">
-    <title>Homet</title>
+    <title>Parallax Scrolling Website - Dubai (UAE) | Codehal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>&#x1F578; Spider Programming &#x1F578;</h1>
+        <h2 class="logo">Travel</h2>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Places</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
-    <nav class="menu1">
-        <a href="#">Home</a>
-        <a href="#">Post</a>
-    </nav>
-    <nav class="menu2">
-        <a href="#">Content</a>
-        <a href="#">Contact</a>
-    </nav>
-    <main>
-        <div class="background"></div>
-        <section>
-            <div>
-                <div class="caixa">
-                    <p>Teias de conhecimento, programando o futuro.</p>
-                </div>
-            </div>
-            <h1>Opa, eu sou Spider Programming🕷️💻</h1>
-            <p>Aqui na minha teia virtual, você encontrará tudo sobre <br> programação, memes e notícias incríveis do mundo da tecnologia. <br> Estou pronto para compartilhar com você os segredos e truques desse universo, <br> desde os melhores códigos até as últimas tendências 🚀🕸️</p>
-        </section>
-    </main>
-    <footer>
-        <p>Blog feito por <a href="https://github.com/vinigomes-code" target="_blank" rel="external">ViniCode</a></p>
-    </footer>
+
+    <section class="parallax">
+        <img src="stars.png" id="stars">
+        <img src="burjkhalifa.png" id="burjkhalifa">
+        <img src="building.png" id="buildid">
+        <img src="dubaitext.png" id="dubaitext">
+    </section>
+
+    <section class="sec">
+        <h2>Dubai - United Arab Emirates</h2>
+        <h2>Parallax Scrolling Website</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
+            
+        </p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
