--- a/index.html
+++ b/index.html
@@ -5,40 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Scrolling Website - Dubai (UAE) | Codehal</title>
+    <title>Animated Website HTML CSS | Codehal</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <header>
-        <h2 class="logo">Travel</h2>
+    <header class="header">
+        <a href="#" class="logo">Cars.</a>
+
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Places</a>
-            <a href="#">Contact</a>
+            <a href="#" style="--i:1;" class="active">Home</a>
+            <a href="https://www.youtube.com/" style="--i:2;">About</a>
+            <a href="#" style="--i:3;">Review</a>
+            <a href="#" style="--i:4;">Featured</a>
+            <a href="#" style="--i:5;">Contact</a>
         </nav>
+
+        <div class="social-media">
+            <a href="#" style="--i:1;"><i class='bx bxl-twitter'></i></a>
+            <a href="#" style="--i:2;"><i class='bx bxl-facebook'></i></a>
+            <a href="#" style="--i:3;"><i class='bx bxl-instagram-alt'></i></a>
+        </div>
     </header>
 
-    <section class="parallax">
-        <img src="stars.png" id="stars">
-        <img src="burjkhalifa.png" id="burjkhalifa">
-        <img src="building.png" id="buildid">
-        <img src="dubaitext.png" id="dubaitext">
+    <section class="home">
+        <div class="home-content">
+            <h1>Car Dealing Experience.</h1>
+            <h3>Redefined!</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae non at vitae, minima necessitatibus laborum saepe accusantium fugit veniam nostrum illum quis unde asperiores odit consectetur maxime. Est.</p>
+            <a href="#" class="btn">Explore Cars</a>
+        </div>
+
+        <div class="home-img">
+            <div class="rhombus">
+                <img src="car.png" alt="">
+            </div>
+        </div>
+
+        <div class="rhombus2"></div>
     </section>
 
-    <section class="sec">
-        <h2>Dubai - United Arab Emirates</h2>
-        <h2>Parallax Scrolling Website</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis voluptatem libero expedita cumque facere maxime sunt. Molestiae temporibus quasi, error nulla mollitia tenetur nam iure aspernatur quam. Enim atque, unde ipsum odit saepe soluta officiis inventore quos numquam rem sit totam. Vitae at, architecto libero quidem dolore distinctio ducimus deleniti consequuntur amet quasi delectus voluptatem, ipsam eveniet enim ipsa odio sint suscipit corporis, modi aperiam. Iure molestias ex maxime qui architecto laboriosam ipsam enim sapiente. Quibusdam dolore ducimus maiores fuga deleniti numquam repudiandae quas adipisci. Modi nobis, voluptatum laborum alias neque veniam asperiores, culpa eos harum repellat nulla sit, nesciunt dicta! Laborum, id deleniti debitis ipsum maiores exercitationem, voluptatibus ab voluptates ea repellat laboriosam quibusdam! Vitae dolorum ex qui aperiam? Delectus animi sed alias quas, nulla dolor? Aliquam?<br><br>
-            
-        </p>
-    </section>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
